--- a/Alpha/AlphaMvc/Views/BDC/Index.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/Index.cshtml
@@ -10,7 +10,7 @@
         <tr>
             <td>
                 <div class="topictd">List</div>
-                <a href="/BreakDownCost/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
+                <a href="/BDC/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
             </td>
         </tr>
     </table>
@@ -79,14 +79,6 @@
 
     @*<table id="result"></table>*@
 </div>
-
-
-<ul class="form-style">
-    <li>
-        <input id="Del" type="Button" value="Del" />
-    </li>
-</ul>
-<a href="#" id="Del"><img src="@Url.Content("~/Images/delete.png")" alt="IMAGES" /></a>
 
 @* ------------------------------- grid  -------------------------------*@
 
