--- a/Alpha/AlphaMvc/Content/hidegrid.css
+++ b/Alpha/AlphaMvc/Content/hidegrid.css
@@ -2,8 +2,16 @@
 {
     display: grid;
 }
+ .hidecolumn
+{
+    display: none;
+}
  @media screen and (max-width:680px) {
       .hideANDseek
+    {
+        display: none;
+    }
+       .hidecolumn
     {
         display: none;
     }
