--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
         <script language="javascript" type="text/javascript">
         $(function () {
             $("#products").accordion();
-            $('#nav li:has(ul)').doubleTapToGo();
+            //$('#nav li:has(ul)').doubleTapToGo();
         });
         function myFunction() {
             var x = document.getElementById("myTopnav");
@@ -38,12 +38,12 @@
                 x.className = "topnav";
             }
         }
-        $(document).ready(function () {
-            $("#myModal").modal(
-                {
-                    backdrop:'static',
-                });
-        });
+        //$(document).ready(function () {
+        //    $("#myModal").modal(
+        //        {
+        //            backdrop:'static',
+        //        });
+        //});
         </script>
         @* ---------------------------- menu -------------------------- *@
         <meta name="viewport" content="width=device-width">
