--- a/Alpha/AlphaMvc/Views/Employee/EditEmployee.cshtml
+++ b/Alpha/AlphaMvc/Views/Employee/EditEmployee.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "EditEmployee";
 }
 
 <h2>Technician Edit</h2>
 <table>
     <tr>
         <td>
-            @Html.ActionLink("Teachnician List", "Index")
+            @Html.ActionLink("Teachnician List", "IndexEmployee")
         </td>
     </tr>
 </table>
