--- a/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "IndexJobOrder";
 }
 
 <h2>JobOrder</h2>
@@ -8,7 +8,7 @@
     <tr>
         <td>
             <div class="topictd">List</div>
-            <a href="/JobOrder/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
+            <a href="/JobOrder/CreateJobOrder"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
         </td>
     </tr>
 </table>
