--- a/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
@@ -1,12 +1,14 @@
-﻿@{
-    ViewBag.Title = "Edit";
+﻿@model AlphaMvc.Models.BDCModels
+@{
+@{
+    ViewBag.Title = "EditBDC";
 }
 
 <h2>BreakDown Cost Edit</h2>
 <table>
     <tr>
         <td>
-            @Html.ActionLink("Break Down Cost List", "Index")
+            @Html.ActionLink("Break Down Cost List", "IndexBDC")
         </td>
     </tr>
 </table>
@@ -19,7 +21,6 @@
 
 <link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/css/buttons.jqueryui.min.css")" rel="stylesheet" type="text/css" />
-
 
 <script src="@Url.Content("https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js")" type="text/javascript"></script>
@@ -106,37 +107,43 @@
 
     @using (Html.BeginForm())
     {
-
-
         <form>
             <ul class="form-style-1">
                 <li>
-                    <label class="btnnew">Doc Version</label>&nbsp;<img src="@Url.Content("~/images/btnNewVersion.jpg")" alt="IMAGES" class="btnimage-3" />
+                    <img src="@Url.Content("~/images/btnNewVersion.jpg")" alt="IMAGES" class="btnimage-3" />
                 </li>
                 <li>
-                    <input type="text" name="field1" class="field-select-small-2" placeholder="V1" disabled />
+                    @Html.LabelFor(a => a.Docver)
+                    @Html.TextBoxFor(a => a.Docver, new { id = "Docver", @class = "field-select-small-2", placeholder = "1", disabled = "disabled" })
+                    @Html.ValidationMessageFor(a => a.Docver)
                 </li>
                 <li>
-                    <label>ใบเสนอราคา<span class="required">*</span></label>
-                    <input type="text" name="field1" class="field-select-big" placeholder="ใบเสนอราคา" disabled />&nbsp;<a href="#" id="opener">
-                        <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" />
-                    </a>
-                </li>
-            </ul>
-            <ul class="form-style-1">
-                <li>
-                    <label class="label-big">ราคาขาย<span class="required">*</span></label>&nbsp;<label class="label-small">ราคาทุน<span class="required">*</span></label>
-                    <input type="text" name="field1" class="field-divided" placeholder="ราคาขาย" />&nbsp;<input type="text" name="field2" class="field-divided" placeholder="ราคาทุน" />
-                </li>
-                <li>
-                    <label>กำไร<span class="required">*</span></label>
-                    <input type="text" name="field1" class="field-divided" placeholder="กำไร" />
+                    @Html.LabelFor(a => a.QuotationNo)
+                    @Html.TextBoxFor(a => a.QuotationNo, new { id = "QuotationNo", @class = "field-select-big", placeholder = "ใบเสนอราคา", disabled = "disabled" })
+                    @Html.ValidationMessageFor(a => a.QuotationNo)
+                    &nbsp;<a href="#" id="opener"><img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" /></a>
                 </li>
             </ul>
             <ul class="form-style-1">
                 <li>
-                    <label>หมายเหตุ<span class="required">*</span></label>
-                    <textarea name="field5" id="field5" class="field-long field-textarea"></textarea>
+                    @Html.LabelFor(a => a.Price)
+                    @Html.TextBoxFor(a => a.Price, new { id = "Price", @class = "field-select-big", placeholder = "ราคาขาย" })
+                    @Html.ValidationMessageFor(a => a.Price)&nbsp;
+                    @Html.LabelFor(a => a.Cost)
+                    @Html.TextBoxFor(a => a.Cost, new { id = "Cost", @class = "field-select-big", placeholder = "ราคาทุน" })
+                    @Html.ValidationMessageFor(a => a.Cost)
+                </li>
+                <li>
+                    @Html.LabelFor(a => a.Profit)
+                    @Html.TextBoxFor(a => a.Profit, new { id = "Profit", @class = "field-divided", placeholder = "กำไร" })
+                    @Html.ValidationMessageFor(a => a.Profit)
+                </li>
+            </ul>
+            <ul class="form-style-1">
+                <li>
+                    @Html.LabelFor(a => a.Remark)
+                    @Html.TextAreaFor(a => a.Remark, new { id = "Remark", @class = "field-long field-textarea", placeholder = "กำไร" })
+                    @Html.ValidationMessageFor(a => a.Remark)
                 </li>
                 <br />
             </ul>
@@ -151,7 +158,7 @@
                                 </ul>
                                 <div class="resp-tabs-container hor_1">
                                     <div>
-                                        <a href="@Url.Action("Create", "JobOrder")" class="alink"><img src="@Url.Content("~/Images/btnAdd.png")" class="btnimage-2" /></a>
+                                        <a href="@Url.Action("CreateJobOrder", "JobOrder")" class="alink"><img src="@Url.Content("~/Images/btnAdd.png")" class="btnimage-2" /></a>
                                         <div class="grigbar">
                                             <table id="example" class="display" cellspacing="0">
                                                 <thead>
@@ -309,52 +316,53 @@
             </table>
             <ul class="form-style-1">
                 <li>
-                    <input type="submit" value="Save" />
+                    <input type="submit" value="Save" id="Create" />
                 </li>
             </ul>
         </form>
     }
 </div>
-<script>
+<script type="text/javascript">
+
     $(document).ready(function () {
+        var id= @Request.Params["id"];
+        $.ajax(
+       {
+           url: 'http://localhost:13131/api/BDC/'+id,
+           type: 'GET',
+           datatype: 'json',
+           success: function (data) {
+               data = JSON.parse(data);
+               $("#Docver").val(data.Table[0].Docver),$("#QuotationNo").val(data.Table[0].QuotationNo),$("#Price").val(data.Table[0].Price)
+               ,$("#Cost").val(data.Table[0].Cost),$("#Profit").val(data.Table[0].Profit),$("#Remark").val(data.Table[0].Remark);
+           },
+           error: function (msg) {
+               alert(msg);
+           }
 
-        $('#parentHorizontalTab').easyResponsiveTabs({
-            type: 'default', //Types: default, vertical, accordion
-            width: 'auto', //auto or any width like 600px
-            fit: true, // 100% fit in a container
-            tabidentify: 'hor_1', // The tab groups identifier
-            activate: function (event) { // Callback function if tab is switched
-                var $tab = $(this);
-                var $info = $('#nested-tabInfo');
-                var $name = $('span', $info);
-                $name.text($tab.text());
-                $info.show();
-            }
-        });
+       });
 
-            var table = $('#example').DataTable({
-                lengthChange: false
-            });
-
-            var table2 = $('#example2').DataTable({
-                lengthChange: false
-            });
-
-
-
-            table.buttons().container()
-                .insertBefore('#example_filter');
-    });
-
-</script>
-
-@{
-
-            if (ViewData["result"] != "" && ViewData["result"] != null)
+        $("#Update").click(function () {
+            var dataObject = { ID: @Request.Params["id"], Docver: 1, QuotationNo: $("#QuotationNo").val(), Price: $("#Price").val(), Cost: $("#Cost").val(),
+                Profit: $("#Profit").val(), Remark: $("#Remark").val()};
+            console.log(dataObject);
+            $.ajax(
             {
-                ViewData["result"] = null;
-        <script type="text/javascript" language="javascript">
-                    alert("Data saved Successfully");
-        </script>
-    }
-}
+                url: 'http://localhost:13131/api/BDC/PUT',
+                type: 'PUT',
+                data: dataObject,
+                datatype: 'json',
+
+                success: function (result) {
+                    alert('Update is completed');
+                    top.location.href = "/BDC/IndexBDC";
+                }
+                ,
+                error: function (msg) {
+                    alert(msg);
+                    //top.location.href = "/ExpenseMaster/Index";
+                }
+            });
+        });
+    });
+</script>
