--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -1,17 +1,20 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "IndexBDC";
 }
 
-<h2>Master Income</h2>
-@* ------------------------------- Header -------------------------------*@
-<table class="btnAdd">
-    <tr>
-        <td>
-            <div class="topictd">List</div>
-            <a href="/IncomeMaster/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
-        </td>
-    </tr>
-</table>
+<h2>BreakDownCost</h2>
+
+    @*<br />*@
+    @* ------------------------------- Header -------------------------------*@
+    <table class="btnAdd">
+        <tr>
+            <td>
+                <div class="topictd">List</div>
+                <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
+            </td>
+        </tr>
+    </table>
+   @* ------------------------------- grid  -------------------------------*@
 <link href="@Url.Content("~/Content/table/jquery-ui.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
 @*<script src="@Url.Content("https://code.jquery.com/jquery-1.12.4.js")" type="text/javascript"></script>*@
@@ -52,6 +55,7 @@
 <table class="barattach-2">
     <tr>
         <td>
+
             <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter"><br /></div>
         </td>
     </tr>
@@ -63,18 +67,31 @@
             <tr>
                 <th>No.</th>
                 <th class="hidecolumn">ID</th>
-                <th>รายละเอียด</th>
+                <th>Doc Version</th>
+                <th>ใบเสนอราคา</th>
+                <th>ราคาขาย</th>
+                <th>ราคาทุน</th>
+                <th>กำไร</th>
                 <th></th>
             </tr>
         </thead>
         <tbody id="result"></tbody>
     </table>
+
+    @*<table id="result"></table>*@
 </div>
 
 @* ------------------------------- grid  -------------------------------*@
 
 <script>
         $(document).ready(function () {
+
+
+            $('#tableData').paging({ limit: 5 });
+
+
+            //------------------------- Paging -------------------------
+
             //------------------------- Sorting ------------------------
             $('th').click(function () {
                 var table = $(this).parents('table').eq(0)
@@ -91,18 +108,26 @@
             }
             function getCellValue(row, index) { return $(row).children('td').eq(index).html() }
             //------------------------- Sorting ------------------------
-
             //-------------------------filter------------------------
             $("#searchInput").keyup(function () {
+                //hide all the rows
                 $("#result").find("tr").hide();
+
+                //split the current value of searchInput
                 var data = this.value.split(" ");
+                //create a jquery object of the rows
                 var jo = $("#result").find("tr");
+
+                //Recusively filter the jquery object to get results.
                 $.each(data, function (i, v) {
                     jo = jo.filter("*:contains('" + v + "')");
                 });
+                //show the rows that match.
                 jo.show();
+                //Removes the placeholder text
 
             }).focus(function () {
+                this.value = "";
                 $(this).css({ "color": "black" });
                 $(this).unbind('focus');
             }).css({ "color": "#C0C0C0" });
@@ -110,7 +135,7 @@
 
             $.ajax(
             {
-                url: 'http://localhost:13131/api/IncomeMaster/Get',
+                url: 'http://localhost:13131/api/BDC/Get',
                 type: 'GET',
                 datatype: 'json',
                 success: function (data) {
@@ -120,35 +145,37 @@
                         html += '<tr>';
                         html += '<td>' + data.Table[i].RowNum + '</td>';
                         html += '<td class="hidecolumn">' + data.Table[i].ID + '</td>';
-                        html += '<td>' + data.Table[i].Detail + '</td>';
+                        html += '<td>' + data.Table[i].Docver + '</td>';
+                        html += '<td>' + data.Table[i].QuotationNo + '</td>';
+                        html += '<td>' + data.Table[i].Price + '</td>';
+                        html += '<td>' + data.Table[i].Cost + '</td>';
+                        html += '<td>' + data.Table[i].Profit + '</td>';
                         html += '<td>';
-                        html += '<a href="/IncomeMaster/Edit?id=' + data.Table[i].ID + '" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
+                        html += '<a href="/BDC/EditBDC?id=' + data.Table[i].ID + '" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
                         html += '<a href="#" id="del' + data.Table[i].ID + '" onclick = " RowDelete(' + data.Table[i].ID + ') " >' + '<img src="@Url.Content("~/Images/delete.png")" /></a>';
+                        html += '</td>';
                         html += '</tr>';
                     }
                     html += '</tbody>';
                     document.getElementById("result").innerHTML = html;
-
                 },
                 error: function (msg) {
                     alert(msg)
                 }
             });
-
         });
-
     function RowDelete(id) {
         var dataObject = { ID: id };
         $.ajax(
             {
-                url: 'http://localhost:13131/api/IncomeMaster/Delete',
+                url: 'http://localhost:13131/api/BDC/Delete',
                 type: 'DELETE',
                 data: dataObject,
                 datatype: 'json',
 
                 success: function (result) {
                     alert('Delete is completed')
-                    window.location.href = "../IncomeMaster/Index";
+                    window.location.href = "../BDC/IndexBDC";
                 }
                 ,
                 error: function (msg) {
