--- a/Alpha/AlphaMvc/Views/Employee/CreateEmployee.cshtml
+++ b/Alpha/AlphaMvc/Views/Employee/CreateEmployee.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AlphaMvc.Models.EmployeeModels
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "CreateEmployee";
 }
 
 <h2>Create</h2>
@@ -8,7 +8,7 @@
 <table>
     <tr>
         <td>
-            @Html.ActionLink("Teachnician List", "Index")
+            @Html.ActionLink("Teachnician List", "IndexEmployee")
         </td>
     </tr>
 </table>
