--- a/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
@@ -1,9 +1,9 @@
-﻿@model AlphaMvc.Models.IncomeMaster
+﻿@model AlphaMvc.Models.ExpenseMaster
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "CreateExpenseMaster";
 }
 
-<h2>Master Income Create</h2>
+<h2>Master Expense Create</h2>
 <link href="@Url.Content("~/Content/editable/tablestyle.css")" rel="stylesheet" type="text/css" />
 @* -------------------------------------- dynotable ------------------------------- *@
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
@@ -16,7 +16,6 @@
 <link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
 
-<div id="container">
     @using (Html.BeginForm())
     {
         <form>
@@ -25,39 +24,34 @@
                     @Html.LabelFor(a => a.Detail)
                     @Html.TextBoxFor(a => a.Detail, new { id = "Detail" })
                     @Html.ValidationMessageFor(a => a.Detail)
-                </li>              
+                </li> 
             </ul>
             <br />
-
             <ul class="form-style">
                 <li>
-                    <input type="submit" value="Save" id="Create" />
+                    <input type="submit" value="Save" id="Save" />
                 </li>
             </ul>
         </form>
     }
-</div>
+
 <script type="text/javascript">
     $(document).ready(function () {
-
-        $("#Create").click(function () {
+        $("#Save").click(function () {
             var dataObject = { Detail: $("#Detail").val() };
             $.ajax(
             {
-                url: 'http://localhost:13131/api/IncomeMaster/Post',
+                url: 'http://localhost:13131/api/ExpenseMaster/Post',
                 type: 'POST',
                 data: dataObject,
                 datatype: 'json',
 
-                success: function (result) {
-                    alert('Create is completed')
-                    window.location.href = "../IncomeMaster/Index";
-                }
-                ,
-                error: function (msg) {
-                    alert(msg)
-                }
+                success: function (data) {
+                    alert('Created Successfully');
+                    window.location.href = "../ExpenseMaster/IndexExpenseMaster";
+                },
+                error: function (msg) { alert(msg); }
             });
         });
-    });
+    }); 
 </script>
