--- a/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
@@ -1,23 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "IndexExpenseMaster";
 }
 
-<h2>BreakDownCost</h2>
-
-    @*<br />*@
-    @* ------------------------------- Header -------------------------------*@
-    <table class="btnAdd">
-        <tr>
-            <td>
-                <div class="topictd">List</div>
-                <a href="/BDC/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
-            </td>
-        </tr>
-    </table>
-   @* ------------------------------- grid  -------------------------------*@
+<h2>Master Expense</h2>
 <link href="@Url.Content("~/Content/table/jquery-ui.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
-@*<script src="@Url.Content("https://code.jquery.com/jquery-1.12.4.js")" type="text/javascript"></script>*@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
@@ -50,12 +37,20 @@
         font-family: Arial, sans-serif;
     }
 </style>
+@* ------------------------------- Header -------------------------------*@
+<table class="btnAdd">
+    <tr>
+        <td>
+            <div class="topictd">List</div>
+            <a href="/ExpenseMaster/CreateExpenseMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
+        </td>
+    </tr>
+</table>
 
-@*<table id="example" class="display" cellspacing="0">*@
+@* ------------------------------- grid  -------------------------------*@
 <table class="barattach-2">
     <tr>
         <td>
-
             <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter"><br /></div>
         </td>
     </tr>
@@ -66,32 +61,21 @@
         <thead>
             <tr>
                 <th>No.</th>
-                <th>Doc Version</th>
-                <th>ใบเสนอราคา</th>
-                <th>ราคาขาย</th>
-                <th>ราคาทุน</th>
-                <th>กำไร</th>
+                <th class="hidecolumn">ID</th>
+                <th>รายละเอียด</th>
                 <th></th>
             </tr>
         </thead>
         <tbody id="result"></tbody>
     </table>
-
-    @*<table id="result"></table>*@
 </div>
 
-@* ------------------------------- grid  -------------------------------*@
+      @* ------------------------------- grid  -------------------------------*@
 
 <script>
-        $(document).ready(function () {
-
-
-            $('#tableData').paging({ limit: 5 });
-
-
-            //------------------------- Paging -------------------------
-
+    $(document).ready(function () {
             //------------------------- Sorting ------------------------
+            $('#tableData').paging({ limit: 5 });
             $('th').click(function () {
                 var table = $(this).parents('table').eq(0)
                 var rows = table.find('tr:gt(0)').toArray().sort(comparer($(this).index()))
@@ -106,24 +90,16 @@
                 }
             }
             function getCellValue(row, index) { return $(row).children('td').eq(index).html() }
-            //------------------------- Sorting ------------------------
+            
             //-------------------------filter------------------------
             $("#searchInput").keyup(function () {
-                //hide all the rows
                 $("#result").find("tr").hide();
-
-                //split the current value of searchInput
                 var data = this.value.split(" ");
-                //create a jquery object of the rows
                 var jo = $("#result").find("tr");
-
-                //Recusively filter the jquery object to get results.
                 $.each(data, function (i, v) {
                     jo = jo.filter("*:contains('" + v + "')");
                 });
-                //show the rows that match.
                 jo.show();
-                //Removes the placeholder text
 
             }).focus(function () {
                 this.value = "";
@@ -134,7 +110,7 @@
 
             $.ajax(
             {
-                url: 'http://localhost:13131/api/BDC/Get',
+                url: 'http://localhost:13131/api/ExpenseMaster/',
                 type: 'GET',
                 datatype: 'json',
                 success: function (data) {
@@ -142,12 +118,13 @@
                     var html = '<tbody>';
                     for (var i = 0; i < data.Table.length; i++) {
                         html += '<tr>';
-                        html += '<td>' + data.Table[i].ID + '</td>';
-                        html += '<td>' + data.Table[i].Docver + '</td>';
-                        html += '<td>' + data.Table[i].QuotationNo + '</td>';
-                        html += '<td>' + data.Table[i].Price + '</td>';
-                        html += '<td>' + data.Table[i].Cost + '</td>';
-                        html += '<td>' + data.Table[i].Profit + '</td>';
+                        html += '<td>' + data.Table[i].RowNum + '</td>';
+                        html += '<td class="hidecolumn">' + data.Table[i].ID + '</td>';
+                        html += '<td>' + data.Table[i].Detail + '</td>';
+                        html += '<td>';
+                        html += '<a href="/ExpenseMaster/EditExpenseMaster?id='+ data.Table[i].ID +'" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
+                        html += '<a href="#" id="del' + data.Table[i].ID + '" onclick = " RowDelete(' + data.Table[i].ID + ') " >' + '<img src="@Url.Content("~/Images/delete.png")" /></a>';
+                        html += '</td>';
                         html += '</tr>';
                     }
                     html += '</tbody>';
@@ -157,5 +134,29 @@
                     alert(msg)
                 }
             });
-         });
+    });
+
+    function RowDelete(id) {
+        var dataObject = { ID: id };
+            $.ajax(
+                {
+                    url: 'http://localhost:13131/api/ExpenseMaster/Delete',
+                    type: 'DELETE',
+                    data: dataObject,
+                    datatype: 'json',
+
+                    success: function (result) {
+                        alert('Delete is completed')
+                        window.location.href = "../ExpenseMaster/IndexExpenseMaster";
+                    }
+                    ,
+                    error: function (msg) {
+                        alert(msg)
+                    }
+
+                   
+                }); alert(id);
+        }
 </script>
+
+
