--- a/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
@@ -1,8 +1,9 @@
-﻿@{
-    ViewBag.Title = "Edit";
+﻿@model AlphaMvc.Models.IncomeMaster
+@{
+    ViewBag.Title = "Create";
 }
 
-<h2>Master Income Edit</h2>
+<h2>Master Income Create</h2>
 <link href="@Url.Content("~/Content/editable/tablestyle.css")" rel="stylesheet" type="text/css" />
 @* -------------------------------------- dynotable ------------------------------- *@
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
@@ -14,28 +15,49 @@
 
 <link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
-<div id="myModal">
+
+<div id="container">
     @using (Html.BeginForm())
     {
         <form>
             <ul class="form-style">
                 <li>
-                    <label>รายละเอียด<span class="required">*</span></label>
-                    <input type="text" name="field1" class="field-divided" placeholder="Service of Leak Sealing Online" />
-                </li>
-                <br />
+                    @Html.LabelFor(a => a.Detail)
+                    @Html.TextBoxFor(a => a.Detail, new { id = "Detail" })
+                    @Html.ValidationMessageFor(a => a.Detail)
+                </li>              
             </ul>
-            @* ------------------------------------------- tabbar ------------------------------------- *@
-            @* ---------------------------------------------------------------------------------------------------------- *@
+            <br />
 
             <ul class="form-style">
                 <li>
-                    <input type="submit" value="Save" />
+                    <input type="submit" value="Save" id="Create" />
                 </li>
             </ul>
-
-            @* ------------------------------------------- tabbar ------------------------------------- *@
         </form>
-
     }
 </div>
+<script type="text/javascript">
+    $(document).ready(function () {
+
+        $("#Create").click(function () {
+            var dataObject = { Detail: $("#Detail").val() };
+            $.ajax(
+            {
+                url: 'http://localhost:13131/api/IncomeMaster',
+                type: 'POST',
+                data: dataObject,
+                datatype: 'json',
+
+                success: function (result) {
+                    alert('Create is completed')
+                    window.location.href = "../IncomeMaster/Index";
+                }
+                ,
+                error: function (msg) {
+                    alert(msg)
+                }
+            });
+        });
+    });
+</script>
