--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -1,10 +1,20 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "IndexIncomeMaster";
 }
 
-<h2>Master Expense</h2>
+<h2>Master Income</h2>
+@* ------------------------------- Header -------------------------------*@
+<table class="btnAdd">
+    <tr>
+        <td>
+            <div class="topictd">List</div>
+            <a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
+        </td>
+    </tr>
+</table>
 <link href="@Url.Content("~/Content/table/jquery-ui.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
+@*<script src="@Url.Content("https://code.jquery.com/jquery-1.12.4.js")" type="text/javascript"></script>*@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
@@ -37,17 +47,8 @@
         font-family: Arial, sans-serif;
     }
 </style>
-@* ------------------------------- Header -------------------------------*@
-<table class="btnAdd">
-    <tr>
-        <td>
-            <div class="topictd">List</div>
-            <a href="/ExpenseMaster/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
-        </td>
-    </tr>
-</table>
 
-@* ------------------------------- grid  -------------------------------*@
+@*<table id="example" class="display" cellspacing="0">*@
 <table class="barattach-2">
     <tr>
         <td>
@@ -70,12 +71,11 @@
     </table>
 </div>
 
-      @* ------------------------------- grid  -------------------------------*@
+@* ------------------------------- grid  -------------------------------*@
 
 <script>
-    $(document).ready(function () {
+        $(document).ready(function () {
             //------------------------- Sorting ------------------------
-            $('#tableData').paging({ limit: 5 });
             $('th').click(function () {
                 var table = $(this).parents('table').eq(0)
                 var rows = table.find('tr:gt(0)').toArray().sort(comparer($(this).index()))
@@ -90,7 +90,8 @@
                 }
             }
             function getCellValue(row, index) { return $(row).children('td').eq(index).html() }
-            
+            //------------------------- Sorting ------------------------
+
             //-------------------------filter------------------------
             $("#searchInput").keyup(function () {
                 $("#result").find("tr").hide();
@@ -102,7 +103,6 @@
                 jo.show();
 
             }).focus(function () {
-                this.value = "";
                 $(this).css({ "color": "black" });
                 $(this).unbind('focus');
             }).css({ "color": "#C0C0C0" });
@@ -110,7 +110,7 @@
 
             $.ajax(
             {
-                url: 'http://localhost:8090/api/ExpenseMaster/',
+                url: 'http://localhost:13131/api/IncomeMaster',
                 type: 'GET',
                 datatype: 'json',
                 success: function (data) {
@@ -122,40 +122,40 @@
                         html += '<td class="hidecolumn">' + data.Table[i].ID + '</td>';
                         html += '<td>' + data.Table[i].Detail + '</td>';
                         html += '<td>';
-                        html += '<a href="/ExpenseMaster/Edit?id='+ data.Table[i].ID +'" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
+                        html += '<a href="/IncomeMaster/EditIncomeMaster?id=' + data.Table[i].ID + '" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
                         html += '<a href="#" id="del' + data.Table[i].ID + '" onclick = " RowDelete(' + data.Table[i].ID + ') " >' + '<img src="@Url.Content("~/Images/delete.png")" /></a>';
+                        html += '</td>';
                         html += '</tr>';
                     }
                     html += '</tbody>';
                     document.getElementById("result").innerHTML = html;
+
                 },
                 error: function (msg) {
                     alert(msg)
                 }
             });
-    });
+
+        });
 
     function RowDelete(id) {
         var dataObject = { ID: id };
-            $.ajax(
-                {
-                    url: 'http://localhost:13131/api/ExpenseMaster/Delete',
-                    type: 'DELETE',
-                    data: dataObject,
-                    datatype: 'json',
+        $.ajax(
+            {
+                url: 'http://localhost:13131/api/IncomeMaster/Delete',
+                type: 'DELETE',
+                data: dataObject,
+                datatype: 'json',
 
-                    success: function (result) {
-                        alert('Delete is completed')
-                        window.location.href = "../ExpenseMaster/Index";
-                    }
-                    ,
-                    error: function (msg) {
-                        alert(msg)
-                    }
+                success: function (result) {
+                    alert('Delete is completed')
+                    window.location.href = "../IncomeMaster/IndexIncomeMaster";
+                }
+                ,
+                error: function (msg) {
+                    alert(msg)
+                }
 
-                   
-                }); alert(id);
+            });
         }
 </script>
-
-
