--- a/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "IndexProducts";
 }
 <h2>
     Products
@@ -8,7 +8,7 @@
         <tr>
             <td>
                 <div class="topictd">List</div>
-                <a href="/Products/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
+                <a href="/Products/CreateProducts"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
             </td>
         </tr>
     </table>
